tests/expectations/compiler/libraries/wrong_type_const_arg_lib_struct_fail.out
Error [ETYC0372117]: Expected type `u32` but type `bool` was found.
    --> compiler-test:5:31
     |
   5 |         let f: foo_lib::Foo::[true] = foo_lib::Foo::[true] { x: 0u32 };
     |                               ^^^^
Error [ETYC0372117]: Expected type `u32` but type `bool` was found.
    --> compiler-test:5:54
     |
   5 |         let f: foo_lib::Foo::[true] = foo_lib::Foo::[true] { x: 0u32 };
     |                                                      ^^^^
